--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -3,6 +3,39 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 3.5rem;
+}
+
+.name-title {
+    font-size: 3.5rem;
+    font-weight: 800;
+    font-family: var(--SourceSansPro);
+    text-align: center;
+}
+
+.desc-title {
+    font-size: 2.5rem;
+    font-weight: 600;
+    font-family: var(--SourceSansPro);
+    text-align: center;
+    letter-spacing: 1px;
+}
+
+.desc-p {
+    padding-top: 2.5rem;
+    padding-bottom: 2.35rem;
+}
+
+.hr {
+    width: 40rem;   
+    height: 40rem;
+    border-radius: 10px;            
+    background-color:#ff5349;
+}
+
+.home p {
+    font-size: 1.05rem;
+    text-align: center;
 }
 
 .button-div {
@@ -10,6 +43,8 @@
     justify-content: center;
     align-items: center;
     height: 7.5rem;
+    padding-top: 2.5rem;
+    padding-bottom: 3.5rem;
 }
 
 .home-button {
