--- a/src/css/IndProject.css
+++ b/src/css/IndProject.css
@@ -16,6 +16,11 @@
     height: auto;
 }
 
+.image-side img {
+    width: 100%;
+    height: 100%;
+}
+
 .project-skill-container {
     width: auto;
     height: auto;
